fix DT-2309, product thumbnails get cut off, add a max-height to thumbnails

--- a/less/plugins/ecommerce/product.less
+++ b/less/plugins/ecommerce/product.less
@@ -158,11 +158,14 @@
             line-height: 76px;
             display: inline-block;
             vertical-align: middle;
+            max-height: 80px;
             @media @bp-global-medium {
                 line-height: 56px;
+                max-height: 60px;
             }
             @media @bp-global-small {
                 line-height: 36px;
+                max-height: 40px;
             }
         }
     }
